@@ -1,2 +1,1 @@
 etcdir = @sysconfdir@/profile.d
-etc_DATA = Z97-byobu.sh
